--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,8 @@ jobs:
       - run: echo ' first hello'
       - run: node -v
       - run:
-        name Install
+        name: Install
         command: yarn install
       - run:
-        name Build
+        name: Build
         command: yarn build
