--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - run: node -v
       - run:
         name: Install
-        command: yarn install
+        command: npm install
       - run:
         name: Build
-        command: yarn build
+        command: npm build
